<Fix: fix layout issues with carousel>

--- a/src/pages/ViewListing/Listing.css
+++ b/src/pages/ViewListing/Listing.css
@@ -25,7 +25,7 @@
   /* margin-bottom: 5px; */
 }
 .item_details_button {
-  width: 100%;
+  width: 526px;
   box-shadow: none !important;
   background-color: #6318af;
   font-size: 20px;
