--- a/src/pages/ViewListing/ListingCarousel.css
+++ b/src/pages/ViewListing/ListingCarousel.css
@@ -35,15 +35,6 @@
   /* width: ; */
 }
 
-.carousel__images {
-  flex-direction: column;
-  display: inline-block;
-  overflow-x: hidden;
-  overflow-y: auto;
-  margin-bottom: 20px;
-  white-space: nowrap;
-}
-
 .carousel__image-selected {
   border: 3px solid #8840d9dd !important;
   border-radius: 10px;
@@ -51,7 +42,7 @@
 
 .carousel__image {
   height: 123px;
-  min-width: 50px;
+  min-width: 51px;
   border: 1px solid transparent;
   border-radius: 10px;
   background-position: center center;
@@ -59,7 +50,19 @@
   background-size: cover;
   margin-top: 7px;
   margin-bottom: 10px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  margin-bottom: 20px;
+  white-space: nowrap;
 }
+/* .carousel__images {
+  flex-direction: column;
+  display: inline-block;
+  overflow-x: hidden;
+  overflow-y: auto;
+  margin-bottom: 20px;
+  white-space: nowrap;
+} */
 
 .arrow {
   font-size: 40px;
